When menu is open, tapping outside will close but no longer trigger other events (eg. following link or opening filter menu) -- working on Safari (desktop and mobile) but not Chrome yet

--- a/src/main.css
+++ b/src/main.css
@@ -156,6 +156,7 @@ a, a:link {
 }
 
 #darken-page {
+  z-index: 1;
   background-color: black;
   position: fixed;
   top: 0;
